--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "dom.schmidt1986@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "slim/slim": "3.*"
+    }
 }
