--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
             "email": "dom.schmidt1986@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require": {
-        "slim/slim": "3.*"
+        "slim/slim": "3.*",
+        "slim/twig-view": "^2.5"
     }
 }
