--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "slim/slim": "3.*",
-        "slim/twig-view": "^2.5"
+        "slim/twig-view": "^2.5",
+        "webmozart/assert": "^1.10"
     }
 }
