[ng-348]: einfügen des routings und der action AssignManagement.php von warenwirtschaft1

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
     "require": {
         "slim/slim": "3.*",
         "slim/twig-view": "^2.5",
-        "webmozart/assert": "^1.10"
+        "webmozart/assert": "^1.10",
+        "grumpycrouton/grumpypdo": "^1.5",
+        "blogdaren/logger": "^1.1"
     }
 }
