--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "webmozart/assert": "^1.10",
         "grumpycrouton/grumpypdo": "^1.5",
         "blogdaren/logger": "^1.1",
-        "spatie/array-to-xml": "^2.16"
+        "spatie/array-to-xml": "^2.16",
+        "antoineaugusti/easyphpcharts": "^0.1.1"
     }
 }
